batch-mode/ai-json-template-derive/tests/trybuild/fail_unsupported_type.stderr
error[E0277]: the trait bound `i32: ai_json_template::AiJsonTemplate` is not satisfied
  --> tests/trybuild/fail_unsupported_type.rs:12:13
   |
12 |     number: i32,
   |             ^^^ the trait `ai_json_template::AiJsonTemplate` is not implemented for `i32`
   |
   = help: the trait `ai_json_template::AiJsonTemplate` is implemented for `BadConfig`
